# autoptz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  README.md  pyproject.toml  requirements.txt  startup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
autoptz/: README.md  __init__.py  __main__.py  _selftest.py  logsetup.py
autoptz/benchmark/: __init__.py  ground_truth.py  ndi_sim.py  profiles.py  rating.py  results.py  runner.py
autoptz/config/: __init__.py  models.py  store.py
autoptz/engine/: camera_worker.py  process_worker.py  supervisor.py
autoptz/requirements/: base.txt
autoptz/ui/: __main__.py  app.py  branding.py  engine_client.py  frames.py  list_models.py  log_bridge.py  mark_engine.py  mark_runner.py  mark_session.py  theme.py  update_manager.py
autoptz/update/: __init__.py  checker.py  installer.py
docs/: MASTER-PLAN.md  architecture.md  building.md  configuration.md  installation.md  performance.md  troubleshooting.md
docs/engineering/: retired-experiments.md
docs/release/: 2.2.0-reliability-gates.md  2026-06-30-local-gate-notes.md
docs/research/: streaming-tracking-redesign.md
docs/review/: 2026-06-24-architecture-overview.md  2026-06-24-improvement-plan.md  2026-06-25-ptz-framing-realproduct-plan.md
docs/v2-rework/: 00-current-state-and-goals.md  01-target-architecture.md  02-technology-stack.md  03-vision-pipeline.md  04-ptz-control.md  05-ui-ux.md  06-persistence-and-config.md  07-system-requirements-scaling.md  08-execution-roadmap.md  09-implementation-prompts.md  10-ux-overhaul-and-engine-completion.md  11-packaging-and-distribution.md  README.md
face_recognition/: __init__.py
libraries/face_recognition/: api.py  face_detection_cli.py  face_recognition_cli.py
libraries/visca/: camera.py  move_visca_ptz.py  visca_code_lines.py
logic/camera_search/: get_serial_cameras.py  search_ndi.py  test_face_detection.py  test_face_recognition.py  test_face_training.py
logic/cascade_creator/: generate_descriptions.py  zoom_camera.py
logic/facial_recognition/: download_trainer.txt  facial_recognition.py  image_processor.py
logic/facial_tracking/: add_face.py  face_encoding.py  face_object_track.py  face_recognition_tracker_dlib.py  facial_recognition.py  image_processor.py  move_ptz.py  move_visca_ptz.py  old_image_processor.py  old_track_handler.py  old_yolo_handler.py  remove_face.py  reset_database.py  temp_move_ptz.py  temp_startup.py  testing_image_processor.py  track_handler.py  train_face.py  utils.py
logic/image_processing/: facial_recognition.py  person_tracker.py  pose_estimator.py
logic/old_cascade_creator/: generate_descriptions.py  neg.txt
logic/original_facial_tracking/: face_recognition_tracker_dlib.py  facial_recognition.py  temp_startup.py
logic/trainer/: trainer.yml
packaging/: AutoPTZ.icns  Info.plist  autoptz.iss  autoptz.spec  build_linux.sh  build_macos.sh  build_windows.ps1  entitlements.plist  make_icons.py
requirements/: README.md  base.txt  dev.txt  export.txt  gpu-directml.txt  gpu-nvidia.txt  macos.txt  openvino.txt  packaging.txt  requirements.txt  tracking.txt  ui.txt
shared/: constants.py  current_active_camera.py  message_prompts.py  progress_bar.py  watch_trainer_directory.py
test/: multi_tracker.py  pose_estimation_test.py
test/tensorflow_weights/: ssd_mobilenet_v2_coco_2018_03_29.pbtxt
test_cam/: test_onvif.py
tests/: conftest.py  latency_harness.py  synthetic_tracking.py  test_about_mark.py  test_adaptive_reid.py  test_app_mark_routing.py  test_app_signal_shutdown.py  test_associator.py  test_associator_integration.py  test_async_appearance.py  test_bench.py  test_benchmark_cli.py  test_benchmark_profiles.py  test_benchmark_runner.py  test_benchmark_smoke.py  test_camera_context_menu.py  test_camera_identity.py  test_camera_info_telemetry.py  test_camera_worker_framing.py  test_child_watchdog.py  test_config.py  test_coreml_units.py  test_cpu_governor.py  test_detect.py  test_detect_batch.py  test_diagnostics.py  test_digital_framer.py  test_digital_ptz.py  test_discovery.py  test_ego_gate.py  test_egomotion.py  test_engine_client_crud.py  test_experimental_dialog.py  test_experimental_flags.py  test_flags.py  test_frame_pacing.py  test_framing.py  test_ground_truth.py  test_group_framing_worker.py  test_identity.py  (+69 more)
tools/: fetch_models.py  ingest_probe.py  install.py
tools/bench/: ep_compare.py  track_clip.py
ui/: startup.py
ui/homepage/: assign_network_ptz_ui.py  assign_ptz_ui.py  assign_visca_ptz_ui.py  flow_layout.py  flow_layout_test.py  homepage.py  main_window.py  move_visca_ptz.py  test_homepage.kv  test_homepage.py
ui/shared/: watch_trainer_directory.py
ui/test_cam/: best_cam_example.py  main_window.py  model_webcam_test.py  ui_main_window.py
ui/widgets/: camera_widget.py  manual_move_ptz.py  ndi_cam_widget.py  visca_code_lines.py
views/functions/: add_ip_camera_ui.py  assign_network_ptz_ui.py  assign_visca_ptz_ui.py  show_dialogs_ui.py  test_rtsp_camera.py
views/homepage/: camera_setup_thread.py  flow_layout.py  main_window.py
views/test/: test_click_widget.py  test_webcam_thread.py
views/widgets/: camera_widget.py  ndi_cam_widget.py  old_camera_widget.py  (+1 more)
visca/: camera.py  visca_code_lines.py
(+119 files in other folders)
