[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoptz"
version = "2.0.0a0"
description = "AutoPTZ v2 — AI-driven PTZ camera tracking"
requires-python = ">=3.12"
readme = "autoptz/README.md"
license = {file = "LICENSE.md"}

[tool.setuptools.packages.find]
where = ["."]
include = ["autoptz*", "tools*"]

# ── ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4"]
ignore = [
  "E501",   # line length enforced by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["autoptz", "tools"]

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Placeholder modules have no real content yet; skip them
exclude = [
  "autoptz/engine/supervisor\\.py",
  "autoptz/engine/camera_worker\\.py",
  # Phase 2 implemented: ingest.py, go2rtc.py — keep only stub pipeline files excluded
  "autoptz/engine/pipeline/(?!__init__|ingest|go2rtc)",
  "autoptz/engine/ptz/(?!base\\.py|__init__)",
  # Phase 2 implemented: ndi.py, usb.py, onvif.py — no longer excluded
  "autoptz/engine/identity/",
  # Phase 1 implemented: config/ no longer excluded
  "autoptz/ui/",
  "tools/",
]

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
